RESOLVED FIXED275490
[WebGPU] Invalid bounds check in RenderPassEncoder
https://bugs.webkit.org/show_bug.cgi?id=275490
Summary [WebGPU] Invalid bounds check in RenderPassEncoder
Mike Wyrzykowski
Reported 2024-06-14 09:36:31 PDT
[WebGPU] Invalid bounds check in RenderPassEncoder
Attachments
Mike Wyrzykowski
Comment 1 2024-06-14 09:36:51 PDT
Mike Wyrzykowski
Comment 2 2024-06-14 11:58:33 PDT
EWS
Comment 3 2024-06-17 12:02:12 PDT
Committed 280082@main (199e7c1a1ed8): <https://commits.webkit.org/280082@main> Reviewed commits have been landed. Closing PR #29835 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.