[WebGPU] Invalid bounds check in RenderPassEncoder https://bugs.webkit.org/show_bug.cgi?id=275490 <radar://129843768>

Reviewed by Tadeu Zagallo.

The bounds check was incorrect, though I don't think in practice it
was possible to trigger it even through IPC.

Replace the RELEASE_ASSERT + memcpy with memcpySpan to ensure the
memcpy is safe.

* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::executePreDispatchCommands):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executePreDrawCommands):

Canonical link: https://commits.webkit.org/280082@main